fixed icon visibility

--- a/css/main.css
+++ b/css/main.css
@@ -1,209 +1,205 @@
 :root {
-    --mainColor: #3C4556;
-    --mainTextColor : #f2f2f2;
-    --borderColor: rgba(255,255,255, 0.05);
+  --mainColor: #3c4556;
+  --mainTextColor: #f2f2f2;
+  --borderColor: rgba(255, 255, 255, 0.05);
 }
 
 html {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 *,
 *:before,
 *:after {
-    -webkit-box-sizing: inherit;
-    box-sizing: inherit;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    letter-spacing: 1.5px;
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  letter-spacing: 1.5px;
 }
 
 body,
 html {
-    max-width: 768px;
-    height: 100%;
-    margin: 0 auto;
-    display: table;
-    background-color: var(--mainColor);
-    color: var(--mainTextColor);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    padding: 1.5%;
-    line-height: 1.5;
-    border-radius: 35px;
+  max-width: 768px;
+  height: 100%;
+  margin: 0 auto;
+  display: table;
+  background-color: var(--mainColor);
+  color: var(--mainTextColor);
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  padding: 1.5%;
+  line-height: 1.5;
+  border-radius: 35px;
 }
-@media screen and (max-width:768px) {
-    body,
-    html {
-        font-size: 16px;
-    }
+@media screen and (max-width: 768px) {
+  body,
+  html {
+    font-size: 16px;
+  }
 }
 
 .page-wrapper {
-    max-width: 768px;
-    margin: 0 auto;
-    display: table-cell;
-    vertical-align: middle;
+  max-width: 768px;
+  margin: 0 auto;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 /* landing */
 .landing {
-    margin-bottom: 50px;
-    border-bottom: 1px solid var(--borderColor);
-    position: relative;
+  margin-bottom: 50px;
+  border-bottom: 1px solid var(--borderColor);
+  position: relative;
 }
 .landing h1 {
-    position: relative;
-    text-align: center;
-    color: #fff;
-    font-size: 34px;
-    font-weight: 600;
-    width: 100%;
-    margin: 0;
+  position: relative;
+  text-align: center;
+  color: #fff;
+  font-size: 34px;
+  font-weight: 600;
+  width: 100%;
+  margin: 0;
 }
 .landing span {
-    display: block;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-    font-size: 17px;
-    font-weight: 400;
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  font-size: 17px;
+  font-weight: 400;
 }
-@media screen and (max-width:768px) {
-    .landing h1 {
-        font-size: 26px;
-    }
-    .landing span {
-        font-size: 15px;
-    }
+@media screen and (max-width: 768px) {
+  .landing h1 {
+    font-size: 26px;
+  }
+  .landing span {
+    font-size: 15px;
+  }
 }
-
 
 /* section */
 section h2 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: #fff;
-    margin-bottom: 20px;
-    border-bottom: 1px solid var(--borderColor);
-    font-size: 24px;
-    font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: #fff;
+  margin-bottom: 20px;
+  border-bottom: 1px solid var(--borderColor);
+  font-size: 24px;
+  font-weight: 500;
 }
 section h2 img {
-    width: 35px;
-    margin-right: 10px;
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
 }
 section ul li {
-    margin-bottom: 20px;
-    font-size: 16px;
-    font-weight: 300;
-    position: relative;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 300;
+  position: relative;
 }
 section ul li:before {
-    content: "";
-    border: solid rgb(255, 255, 255);
-    border-width: 0 3px 3px 0;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 3px;
-    transform: rotate(-45deg);
+  content: "";
+  border: solid rgb(255, 255, 255);
+  border-width: 0 3px 3px 0;
+  border-radius: 3px;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(-45deg);
 }
-@media screen and (max-width:768px) {
-    section h2 {
-        font-size: 20px;
-    }
-    section h2 img {
-        width: 25px;
-    }
-    section ul li {
-        font-size: 16px;
-    }
+@media screen and (max-width: 768px) {
+  section h2 {
+    font-size: 20px;
+  }
+  section h2 img {
+    width: 25px;
+  }
+  section ul li {
+    font-size: 16px;
+  }
 }
-
 
 /* project */
 .projects {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 .projects a {
-    color: #fff;
-    text-decoration: underline;
-    transition: all .2s;
+  color: #fff;
+  text-decoration: underline;
+  transition: all 0.2s;
 }
 .projects a:hover {
-    color: var(--mainColor);
-    background: #fff;
-    text-decoration: none;
+  color: var(--mainColor);
+  background: #fff;
+  text-decoration: none;
 }
 .projects sup {
-    font-size: 12px;
-    letter-spacing: normal;
-    opacity: .5;
+  font-size: 12px;
+  letter-spacing: normal;
 }
 .projects ul li img {
-    width: 10px;
+  width: 10px;
 }
-
 
 /* about */
 .about {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 .about ul li img {
-    width: 10px;
+  width: 10px;
 }
 .about .cv a {
-    color: #fff;
-    font-size: 17px;
-    text-decoration: underline;
+  color: #fff;
+  font-size: 17px;
+  text-decoration: underline;
 }
-@media screen and (max-width:768px) {
-    .about .cv a {
-        font-size: 16px;
-    }
+@media screen and (max-width: 768px) {
+  .about .cv a {
+    font-size: 16px;
+  }
 }
 .about .cv a:hover {
-    color: #3C4556;
-    background: #fff;
-    text-decoration: none;
+  color: #3c4556;
+  background: #fff;
+  text-decoration: none;
 }
-
 
 /* contact */
 .contact ul li {
-    display: inline-block;
-    margin-right: 15px;
-    margin-top: 5px;
+  display: inline-block;
+  margin-right: 15px;
+  margin-top: 5px;
 }
 .contact ul li:before {
-    content: none;
+  content: none;
 }
 .contact ul li a img {
-    width: 24px;
-    height: 24px;
-    transition: all .2s;
+  width: 24px;
+  height: 24px;
+  transition: all 0.2s;
 }
 .contact ul li a img:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 /* footer */
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 0;
-    margin-top: 50px;
-    font-size: 10px;
-    color: var(--mainTextColor);
-    border-top: 1px solid var(--borderColor);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+  margin-top: 50px;
+  font-size: 10px;
+  color: var(--mainTextColor);
+  border-top: 1px solid var(--borderColor);
 }
 .footer__right img {
-    width: 35px;
-    cursor: pointer;
+  width: 35px;
+  cursor: pointer;
 }
